--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,5 @@
 /*@import "../../styles/variables";*/
 
 .wrapper {
-  background: color(#000 lightness(90%));
+  background: color(red lightness(90%));
 }
